--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,33 @@
-
 .container {
-  width: 100%;
-	overflow-y: auto;
-	_overflow: auto;
-	margin: 0 0 1em;
+  width: 960px;
+  margin: 0px auto;
 }
+
 table, tr, th, td {
   border: 1px solid black;
   /* padding: 10px; */
   
 }
-
-@media only screen and (max-width: 600px) {
-  table, tbody,th, tr, td {
-    width: 100%;
-    font-size: 15px;
-  }
-}
-@media only screen and (max-width: 429px){
-  table, tbody,th, tr, td {
-    width: 100%;
-    font-size: 10px;
-  }
-}
-@media only screen and (max-width: 243px){
-  table, tbody,th, tr, td {
-    width: 100%;
-    font-size: 8px;
-  }
-}
-
-/* @media screen and (min-width: 769px) and (max-width: 1170px) {
-  table, tr, th, td {
+@media screen and (max-width: 959px) {
+  .container {
     width: 100%;
   }
-}
-
-@media screen and (max-width: 768px) {
   table {
-    width: 100vh;
+    width: 80%;
   }
 }
 
-@media screen and (min-width: 1171px) {
-  table {
-    width: 100vh;
+@media screen and (max-width: 959px) {
+  .container {
+    width: 100%;
   }
-} */
+  table {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    width: 320px;
+  }
+}
