--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,126 @@
 .container {
   width: 960px;
   margin: 0px auto;
+  border: 1px solid rgba(0, 0, 0, 0.863);
+  margin-bottom: 10px;
 }
+
+/* ------------------------------- */
+/* Header Designing */
+/* ------------------------------- */
+.head {
+  width: 90%;
+  height: 100%;
+}
+.head ul li {
+  position: relative;
+  list-style: none;
+  display: inline-block;
+  margin-right: 50px;
+}
+
+/* ---------------------------------------------- */
+          /* Navbar Designing */
+/* ---------------------------------------------- */
+nav {
+  margin-bottom: 30px;
+}
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #046ec8;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+  background-color: #046ec8	;
+  color: black;
+}
+.topnav .icon {
+  display: none;
+}
+
+hr {
+  border: 1px solid #046ec8;
+  margin-bottom: 10px;
+}
+
+.free {
+  width: 100%;
+  height: 40vh;
+  margin-bottom: 20px;
+}
+
+
+/* ------------------------------------------------- */
+/* Table Designing */
+/* --------------------------------------------------*/
 
 table, tr, th, td {
   border: 1px solid black;
-  /* padding: 10px; */
   width: "984px";
-  /* text-align: center; */
-    border-spacing: 5px;
-    border-collapse: separate;
+  border-spacing: 5px;
+  border-collapse: separate;
   
 }
+
+/* ------------------------------------------------- */
+/* Footer Designing */
+/* --------------------------------------------------*/
+
+.last {
+  width: 968px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 0;
+
+/* ------------------------------- */
+/* Media Queries */
+/* ------------------------------- */
+
+
+/* -----------------------------------For navbar-------------------------- */
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* ----------------------For Table-------------------------------- */
+
+
 @media screen and (max-width: 959px) {
   .container {
     width: 100%;
